--- a/queryraiserapp/templates/admintechnician.html
+++ b/queryraiserapp/templates/admintechnician.html
@@ -257,6 +257,7 @@
                         <tbody>
                         </tbody>
                     </table>
+                    <p id="noResults" style="display: none;font-size: 14px;text-align: center;">No results found...!</p>
                 </div>
             </div>
         </main> 
@@ -287,7 +288,33 @@
         document.addEventListener('DOMContentLoaded', () => {
             getTechnicians(); 
             getTechnicianFieldsForDropdown();
+            const searchInput = document.querySelector('.search input');
+            searchInput.addEventListener('input', filterTechnician); 
         });
+        function filterTechnician() {
+            const searchText = this.value.toLowerCase(); 
+            const tableRows = document.querySelectorAll('#techniciantable tbody tr');
+            const noResultsMessage = document.getElementById('noResults'); 
+
+            let hasVisibleRow = false; 
+            tableRows.forEach(row => {
+                const TechnicianName = row.querySelector('td:first-child').textContent.toLowerCase().replace(/\s+/g, '').trim();
+                const TechnicianNumber = row.querySelector('td:nth-child(2)').textContent.toLowerCase().replace(/\s+/g, '').trim();
+                const TechnicianField = row.querySelector('td:nth-child(3)').textContent.toLowerCase().replace(/\s+/g, '').trim();
+                const cleanSearchText = searchText.toLowerCase().replace(/\s+/g, '').trim();
+                if (TechnicianName.includes(cleanSearchText) || TechnicianNumber.includes(cleanSearchText) || TechnicianField.includes(cleanSearchText)) {
+                    row.style.display = ''; 
+                    hasVisibleRow = true;
+                } else {
+                    row.style.display = 'none'; 
+                }
+            });
+            if (!hasVisibleRow) {
+                noResultsMessage.style.display = 'block';
+            } else {
+                noResultsMessage.style.display = 'none'; 
+            }
+        }
         function getTechnicians() {
             fetch('/gettechnicians/',{
                 method: 'POST', 
