--- a/queryraiserapp/templates/facultydashboard.html
+++ b/queryraiserapp/templates/facultydashboard.html
@@ -111,7 +111,7 @@
                     <path d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                   </svg>Notifications</a></li>
                 
-                <li><a class="nav-link" href="{% url 'facultydashboard' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <li><a class="nav-link" href="{% url 'facultyfeedbackpage' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M12 20h9"/>
                     <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/>
                   </svg>Feedback</a></li>
